# flow-forge

./: .gitignore  .kanbus.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SETUP.md  bench-hooks.sh  setup.sh
.claude/: settings.json
.claude/commands/: setup.md  status.md  test-hooks.md
agents/analysis/: code-analyzer.md  code-quality.md
agents/consensus/: byzantine-coordinator.md  crdt-synchronizer.md  gossip-coordinator.md  quorum-manager.md  raft-manager.md  security-manager.md
agents/coordination/: integrator.md  team-lead.md
agents/core/: coder.md  planner.md  researcher.md  reviewer.md  tester.md
agents/custom/: database-specialist.md  project-coordinator.md  python-specialist.md  rust-specialist.md
agents/data/: data-ml-model.md
agents/devops/: ops-cicd-github.md
agents/documentation/: docs-api-openapi.md
agents/github/: code-review-swarm.md  github-modes.md  issue-tracker.md  multi-repo-swarm.md  pr-manager.md  project-board-sync.md  release-manager.md  release-swarm.md  repo-architect.md  swarm-issue.md  swarm-pr.md  sync-coordinator.md  workflow-automation.md
agents/goal/: agent.md  code-goal-planner.md  goal-planner.md
agents/hive-mind/: collective-intelligence.md  queen-coordinator.md  scout-explorer.md  swarm-memory-manager.md  worker-specialist.md
agents/sparc/: architecture.md  completion.md  pseudocode.md  refinement.md  specification.md
agents/specialized/: architect.md  backend.md  database.md  devops.md  docs.md  frontend.md  security.md
agents/swarm/: adaptive-coordinator.md  hierarchical-coordinator.md  mesh-coordinator.md
agents/testing/: production-validator.md  tdd-london-swarm.md
config/: defaults.toml
crates/flowforge-agents/: Cargo.toml
crates/flowforge-agents/src/: lib.rs  loader.rs  registry.rs  router.rs
crates/flowforge-cli/: Cargo.toml
crates/flowforge-cli/src/: main.rs
crates/flowforge-cli/src/commands/: agent.rs  error.rs  guidance.rs  index.rs  init.rs  intelligence.rs  learn.rs  mailbox.rs  mod.rs  plugin.rs  route.rs  session.rs  status.rs  statusline.rs  test_hooks.rs  tool_metrics.rs  work.rs
crates/flowforge-cli/src/hooks/: mod.rs  notification.rs  post_tool_use.rs  post_tool_use_failure.rs  pre_compact.rs  pre_tool_use.rs  session_end.rs  session_start.rs  stop.rs  subagent_start.rs  subagent_stop.rs  task_completed.rs  teammate_idle.rs  user_prompt_submit.rs
crates/flowforge-cli/tests/: cli.rs
crates/flowforge-core/: Cargo.toml
crates/flowforge-core/src/: code_symbols.rs  config.rs  error.rs  guidance.rs  hook.rs  intelligence.rs  lib.rs  plugin.rs  plugin_exec.rs  project_detection.rs  trajectory.rs  transcript.rs  types.rs  work_tracking.rs
crates/flowforge-core/src/guidance/: gates.rs
crates/flowforge-core/src/types/: agents.rs  collaboration.rs  error_recovery.rs  mod.rs  patterns.rs  sessions.rs  work.rs
crates/flowforge-core/src/work_tracking/: backends.rs  claude_tasks.rs  mod.rs
crates/flowforge-mcp/: Cargo.toml
crates/flowforge-mcp/src/: server.rs  tool_builder.rs  tools.rs
crates/flowforge-mcp/src/tools/: agents.rs  conversations.rs  error_recovery.rs  failure_patterns.rs  file_dependencies.rs  intelligence.rs  memory.rs  mod.rs  plugins.rs  recovery_strategies.rs  tool_metrics.rs  work.rs
crates/flowforge-memory/: Cargo.toml
crates/flowforge-memory/src/: clustering.rs  db.rs  embedding.rs  hnsw.rs  lib.rs  patterns.rs  test_helpers.rs  trajectory.rs
crates/flowforge-memory/src/db/: adaptive_routing.rs  agent_sessions.rs  batching.rs  code_index.rs  complexity.rs  discovered_capabilities.rs  effectiveness.rs  error_recovery.rs  failure_patterns.rs  file_dependencies.rs  injection_cache.rs  kv.rs  mod.rs  patterns.rs  project_intelligence.rs  recovery_strategies.rs  retention.rs  row_parsers.rs  schema.rs  session_metrics.rs  session_reads.rs  sessions.rs  task_decomposition.rs  test_suggestions.rs  tests.rs  tool_metrics.rs  trajectories.rs  vectors.rs  work_items.rs
crates/flowforge-memory/src/patterns/: lifecycle.rs
crates/flowforge-tmux/: Cargo.toml
crates/flowforge-tmux/src/: lib.rs  manager.rs  state.rs
