[workspace]
resolver = "2"
members = [
    "crates/flowforge-cli",
    "crates/flowforge-core",
    "crates/flowforge-memory",
    "crates/flowforge-agents",
    "crates/flowforge-tmux",
    "crates/flowforge-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/flowforge/flowforge"

[workspace.dependencies]
flowforge-core = { path = "crates/flowforge-core" }
flowforge-memory = { path = "crates/flowforge-memory" }
flowforge-agents = { path = "crates/flowforge-agents" }
flowforge-tmux = { path = "crates/flowforge-tmux" }
flowforge-mcp = { path = "crates/flowforge-mcp" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
instant-distance = "0.6"
regex = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
colored = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
