[package]
name = "flowforge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flowforge"
path = "src/main.rs"

[dependencies]
flowforge-core = { workspace = true }
flowforge-memory = { workspace = true }
flowforge-agents = { workspace = true }
flowforge-tmux = { workspace = true }
flowforge-mcp = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
