[package]
name = "flowforge-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
flowforge-core = { workspace = true }
flowforge-memory = { workspace = true }
flowforge-agents = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
