[package]
name = "flowforge-memory"
version.workspace = true
edition.workspace = true

[dependencies]
flowforge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
instant-distance = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
