[package]
name = "flowforge-memory"
version.workspace = true
edition.workspace = true

[features]
default = ["semantic"]
semantic = ["fastembed"]

[dependencies]
flowforge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
instant-distance = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
fastembed = { workspace = true, optional = true }
linfa = { workspace = true }
linfa-clustering = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
