[package]
name = "flowforge-tmux"
version.workspace = true
edition.workspace = true

[dependencies]
flowforge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
